--- a/package.json
+++ b/package.json
@@ -68,10 +68,10 @@
     "lodash": "^4.17.4",
     "mocha": "^3.2.0",
     "node-sass": "^4.5.0",
-    "react": "^15.4.2",
+    "react": "^16.7.0",
     "react-addons-test-utils": "^15.4.2",
     "react-docgen": "^2.13.0",
-    "react-dom": "^15.4.2",
+    "react-dom": "^16.7.0",
     "react-transform-hmr": "^1.0.4",
     "sass-loader": "^4.1.1",
     "sinon": "^1.17.7",
@@ -87,6 +87,7 @@
   },
   "dependencies": {
     "classnames": "^2.2.5",
+    "create-react-class": "^15.6.3",
     "moment": "^2.17.1",
     "react-onclickoutside": "^5.9.0",
     "tether": "^1.4.0"
