chore: Update package name so we can add it to our npm organization

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "author": "HackerOne (edit by Side)",
-  "name": "side-react-datepicker-jp",
+  "name": "@side.co/side-react-datepicker-jp",
   "description": "A simple and reusable datepicker component for React",
   "version": "0.42.0",
   "license": "MIT",
